mejoramiento del modelo clasico

--- a/Paginas/clasico.html
+++ b/Paginas/clasico.html
@@ -50,6 +50,10 @@
                         </div>
                        
                         <div class="input-group input-group-sm mb-3">
+                            <span class="input-group-text">Costo por Unidad (opcional)</span>
+                            <input  id="C" type="number" aria-label="First name" class="form-control" >
+                        </div>
+                        <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">Demanda</span>
                             <input  id="D" type="number" aria-label="First name" class="form-control" >
                         </div>
@@ -89,10 +93,7 @@
                             <span class="input-group-text">EL coste por año</span>
                             <input id="CTA"  disabled type="text" aria-label="First name" class="form-control bg-white" >
                         </div>
-                        <div class="input-group input-group-sm mb-3">
-                            <span class="input-group-text">EL coste por año</span>
-                            <input id="CTA"  disabled type="text" aria-label="First name" class="form-control bg-white" >
-                        </div>
+                        
                     </div>
                 </div>
                 <div onl class="d-grid gap-2 col-2 mx-auto my-2">
