Agregue EOQ con varios artículos con limitación de almacenamiento

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <a href="Paginas/clasico.html" class="nav-link text-light pl-4">Clasico</a>
             </li>
             <li class="nav-item w-100">
-                <a href="Paginas/reducion" class="nav-link text-light pl-4">Reduccion de precios</a>
+                <a href="Paginas/reducion.html" class="nav-link text-light pl-4">Reduccion de precios</a>
             </li>
             <li class="nav-item w-100">
-                <a href="Paginas/almacenamiento" class="nav-link text-light pl-4">Con limitacion de almacenamiento</a>
+                <a href="Paginas/almacenamiento.html" class="nav-link text-light pl-4">Con limitacion de almacenamiento</a>
             </li>
             <li class="nav-item dropdown w-100">
                 <a href="#" class="nav-link dropdown-toggle text-light pl-4" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Pedido Economico</a>
