--- a/Paginas/concosto.html
+++ b/Paginas/concosto.html
@@ -21,7 +21,7 @@
                 <a href="../index.html" class="nav-link text-light pl-4">Inicio</a>
             </li>
             <li class="nav-item w-100">
-                <a href="#" class="nav-link text-light pl-4">Clasico</a>
+                <a href="clasico.html" class="nav-link text-light pl-4">Clasico</a>
             </li>
             <li class="nav-item w-100">
                 <a href="reducion.html" class="nav-link text-light pl-4">Reduccion de precios</a>
@@ -123,7 +123,7 @@
         })
     </script>
 
-    <script src="../js/main.js"></script>
+    <script src="../js/concosto.js"></script>
 </body>
 
 </html>
