--- a/index.html
+++ b/index.html
@@ -43,17 +43,8 @@
         <div >
             <div class="welcome d-flex justify-content-center align-items-center text-light ">
                 <div class="d-flex flex-column bd-highlight mb-3">
-                    <div class="p-2 bd-highlight text-center"><h1 class="agrandar">Bienvenidos</h1></div>
-                    <div class="p-2 bd-highlight text-center"><h2>Equipo de trabajo:</h2></div>
-                    <div class="p-2 bd-highlight"><h3>1-Gabriel Antonio Castillo Alegría, CA19040</h3></div>
-                    <div class="p-2 bd-highlight"><h3>2-Reynaldo Daniel Panameño Romero, PR19004 </h3></div>
-                    <div class="p-2 bd-highlight"><h3>3-Alejandra Clairé Aguilar Mata, AM19089 </h3></div>
-                    <div class="p-2 bd-highlight"><h3>4-Cristian Alexander Guardado Escobar, GE19008</h3></div>
-                    <div class="p-2 bd-highlight"><h3>5-Junior Mauricio Villalta Flores, VF19012</h3></div>
-                    <div class="p-2 bd-highlight"><h3>6-Jorge Eduardo Romero García, RG19041</h3></div>
-                    <div class="p-2 bd-highlight"><h3>7-Jorge Luis Granados Umanzor, GU19002</h3></div>
-                    <div class="p-2 bd-highlight"><h3>8-Azucena Eleticia Merlos Sandoval, MS19038</h3></div>
-                    <div class="p-2 bd-highlight"><h3>9-Erick Josué Romero Castro, RC19025</h3></div>
+                    <div class="p-2 bd-highlight text-center"><h1 class="agrandar">Modelo de Inventario EOQ</h1></div>
+                    
                     
                   </div>
             </div>
